[gd_scene load_steps=14 format=3 uid="uid://cuskm0iosxnif"]

[ext_resource type="Script" uid="uid://e6h46uvnd8mi" path="res://Scripts/MechLayer/PlayerMech.gd" id="1_aawn0"]
[ext_resource type="PackedScene" uid="uid://msa1sqkdwl32" path="res://Assets/Import/MechInterior.blend" id="2_1u0c1"]
[ext_resource type="AudioStream" uid="uid://byx221k3vdffs" path="res://Assets/Audio/FakeAFExplosion.wav" id="2_jsqmi"]
[ext_resource type="PackedScene" uid="uid://b3usd5ssxc6b1" path="res://Scenes/GameObjects/equipment_gantry.tscn" id="3_1i735"]
[ext_resource type="PackedScene" uid="uid://cs63jt85mqf8n" path="res://Scenes/Ui/Ui.tscn" id="4_jqovx"]
[ext_resource type="PackedScene" uid="uid://5nhb10aid85s" path="res://Scenes/Player.tscn" id="5_rqy1y"]
[ext_resource type="Script" uid="uid://cjyqac2xxs6we" path="res://Scripts/MechLayer/MechRegion.gd" id="6_tdg07"]
[ext_resource type="PackedScene" uid="uid://ct8gsn5ks5xmk" path="res://Scenes/MechStructures/TestStruct.tscn" id="7_ncyfr"]
[ext_resource type="Script" uid="uid://ur3bd5ncftu" path="res://Scenes/MechCLU.gd" id="8_o0mpl"]
[ext_resource type="PackedScene" uid="uid://dapq02pyhug5d" path="res://Scenes/Particles/Steam Emitter.tscn" id="10_vuwfp"]

[sub_resource type="CylinderMesh" id="CylinderMesh_58jnd"]
top_radius = 0.2
bottom_radius = 0.2
height = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_58jnd"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_th1i1"]
albedo_color = Color(0.0535656, 0.400248, 0.805626, 1)

[node name="PlayerMech" type="Node"]
script = ExtResource("1_aawn0")
audio_death_explosion = ExtResource("2_jsqmi")
metadata/_custom_type_script = "uid://e6h46uvnd8mi"

[node name="MechInterior" type="Node3D" parent="."]

[node name="Geometry" parent="MechInterior" instance=ExtResource("2_1u0c1")]

[node name="CLU Core" parent="MechInterior/Geometry/CLU Chamber" index="66"]
"blend_shapes/Heatsink UR" = 0.5
"blend_shapes/Heatsink DL" = 0.5

[node name="Destructible Beam CLU Left_001" parent="MechInterior/Geometry/CLU Chamber" index="72"]
process_mode = 4
visible = false

[node name="Destructible Beam CLU Right_001" parent="MechInterior/Geometry/CLU Chamber" index="73"]
process_mode = 4
visible = false

[node name="Destructible Beam CLU Up-Left_001" parent="MechInterior/Geometry/CLU Chamber" index="74"]
process_mode = 4
visible = false

[node name="Truss Narrow 8m_001" parent="MechInterior/Geometry/CLU Chamber" index="76"]
transform = Transform3D(4.1318e-08, -2.0659e-08, -0.693201, -0.490167, 0.490167, -4.38243e-08, 0.490167, 0.490167, 1.46081e-08, 2.13637, -9.40104, 9.40121)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="MechInterior"]
transform = Transform3D(0.933003, 0.101868, 0.34515, -0.192975, -0.667921, 0.718778, 0.303753, -0.737227, -0.603515, 8, 19.2, -6.70203)

[node name="Equipment Gantry" parent="MechInterior" instance=ExtResource("3_1i735")]
transform = Transform3D(-1.74846e-07, 0, 4, 0, 4, 0, -4, 0, -1.74846e-07, -1, 75.5, 0.6)

[node name="External" type="Node3D" parent="MechInterior"]

[node name="UI" parent="MechInterior/External" instance=ExtResource("4_jqovx")]

[node name="LoadoutScreen" parent="MechInterior/External/UI" index="0"]
visible = false

[node name="GameOverPopup" type="PanelContainer" parent="MechInterior/External/UI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.0
offset_top = -41.5
offset_right = 87.0
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MechInterior/External/UI/GameOverPopup"]
layout_mode = 2
theme_override_constants/margin_left = 150
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 150
theme_override_constants/margin_bottom = 60

[node name="VBoxContainer" type="VBoxContainer" parent="MechInterior/External/UI/GameOverPopup/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MechInterior/External/UI/GameOverPopup/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 86
text = "You Dead"

[node name="Button" type="Button" parent="MechInterior/External/UI/GameOverPopup/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(80, 47.56)
layout_mode = 2
size_flags_horizontal = 4
text = "OK
"

[node name="Player" parent="MechInterior/External" node_paths=PackedStringArray("temp_debug1", "temp_debug2") instance=ExtResource("5_rqy1y")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 75.4, 0)
temp_debug1 = NodePath("DebugThingy1")
temp_debug2 = NodePath("DebugThingy2")
min_speed_retention_angle = 1.0472

[node name="DebugThingy1" type="MeshInstance3D" parent="MechInterior/External/Player"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_58jnd")
surface_material_override/0 = SubResource("StandardMaterial3D_58jnd")

[node name="DebugThingy2" type="MeshInstance3D" parent="MechInterior/External/Player"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_58jnd")
surface_material_override/0 = SubResource("StandardMaterial3D_th1i1")

[node name="MechRegions" type="Node" parent="MechInterior"]

[node name="WorkshopCorridor" type="Node" parent="MechInterior/MechRegions"]
script = ExtResource("6_tdg07")
max_durability = 100.0
perforable = true
metadata/_custom_type_script = "uid://cjyqac2xxs6we"

[node name="TestStruct" parent="MechInterior/MechRegions/WorkshopCorridor" instance=ExtResource("7_ncyfr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 79, -6)

[node name="TestStruct2" parent="MechInterior/MechRegions/WorkshopCorridor" instance=ExtResource("7_ncyfr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 78, 9)

[node name="TestStruct3" parent="MechInterior/MechRegions/WorkshopCorridor" instance=ExtResource("7_ncyfr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 79, 18)

[node name="TestStruct4" parent="MechInterior/MechRegions/WorkshopCorridor" instance=ExtResource("7_ncyfr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 84, 12)

[node name="TestStruct5" parent="MechInterior/MechRegions/WorkshopCorridor" instance=ExtResource("7_ncyfr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 81, 6)

[node name="TestStruct6" parent="MechInterior/MechRegions/WorkshopCorridor" instance=ExtResource("7_ncyfr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 84, -6)
collision_layer = 4
active_stage = 2

[node name="CLU" type="Node" parent="MechInterior/MechRegions"]
script = ExtResource("8_o0mpl")
max_durability = 100.0
perforable = true
metadata/_custom_type_script = "uid://be2tpoodpcmic"

[node name="TestStruct6" parent="MechInterior/MechRegions/CLU" instance=ExtResource("7_ncyfr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 67, 19)
collision_layer = 4
active_stage = 2

[node name="Stage1" parent="MechInterior/MechRegions/CLU/TestStruct6/StageHolder" index="0" node_paths=PackedStringArray("external_children")]
process_mode = 4
visible = false
external_children = [NodePath("../../../../../Geometry/CLU Chamber/Destructible Beam CLU Up-Left_001")]

[node name="Stage2" parent="MechInterior/MechRegions/CLU/TestStruct6/StageHolder" index="1" node_paths=PackedStringArray("external_children")]
process_mode = 0
visible = true
external_children = [NodePath("../../../../../Geometry/CLU Chamber/Damaged Beam CLU Up-Left_001")]

[node name="TestStruct7" parent="MechInterior/MechRegions/CLU" instance=ExtResource("7_ncyfr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.1, 66.1, 12.9)
collision_layer = 4
active_stage = 2

[node name="Stage1" parent="MechInterior/MechRegions/CLU/TestStruct7/StageHolder" index="0"]
process_mode = 4
visible = false

[node name="Stage2" parent="MechInterior/MechRegions/CLU/TestStruct7/StageHolder" index="1"]
process_mode = 0
visible = true

[node name="Steam Particles" parent="MechInterior/MechRegions/CLU/TestStruct7/StageHolder/Stage2" index="1" instance=ExtResource("10_vuwfp")]
transform = Transform3D(0.786566, 0.612372, -0.0794594, -0.5, 0.707107, 0.5, 0.362373, -0.353553, 0.862372, 0, 0, 0)

[node name="TestStruct8" parent="MechInterior/MechRegions/CLU" instance=ExtResource("7_ncyfr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 67, 5)
collision_layer = 4
active_stage = 2

[node name="Stage1" parent="MechInterior/MechRegions/CLU/TestStruct8/StageHolder" index="0"]
process_mode = 4
visible = false

[node name="Stage2" parent="MechInterior/MechRegions/CLU/TestStruct8/StageHolder" index="1"]
process_mode = 0
visible = true

[node name="Steam Particles" parent="MechInterior/MechRegions/CLU/TestStruct8/StageHolder/Stage2" index="0" instance=ExtResource("10_vuwfp")]

[node name="TestStruct9" parent="MechInterior/MechRegions/CLU" instance=ExtResource("7_ncyfr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 56.4, 22.2)
collision_layer = 4
active_stage = 2

[node name="Stage1" parent="MechInterior/MechRegions/CLU/TestStruct9/StageHolder" index="0" node_paths=PackedStringArray("external_children")]
process_mode = 4
visible = false
external_children = [NodePath("../../../../../Geometry/CLU Chamber/Destructible Beam CLU Left_001")]

[node name="Stage2" parent="MechInterior/MechRegions/CLU/TestStruct9/StageHolder" index="1" node_paths=PackedStringArray("external_children")]
process_mode = 0
visible = true
external_children = [NodePath("../../../../../Geometry/CLU Chamber/Damaged Beam CLU Left_001")]

[node name="TestStruct10" parent="MechInterior/MechRegions/CLU" instance=ExtResource("7_ncyfr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 47, -1.4)
collision_layer = 4
active_stage = 2

[node name="Stage1" parent="MechInterior/MechRegions/CLU/TestStruct10/StageHolder" index="0" node_paths=PackedStringArray("external_children")]
process_mode = 4
visible = false
external_children = [NodePath("../../../../../Geometry/CLU Chamber/Destructible Beam CLU Right_001")]

[node name="Stage2" parent="MechInterior/MechRegions/CLU/TestStruct10/StageHolder" index="1" node_paths=PackedStringArray("external_children")]
process_mode = 0
visible = true
external_children = [NodePath("../../../../../Geometry/CLU Chamber/Damaged Beam CLU Right_001")]

[node name="MechGlobalAudio" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="MechInterior/External/UI/GameOverPopup/MarginContainer/VBoxContainer/Button" to="MechInterior/External/UI/GameOverPopup" method="hide"]

[editable path="MechInterior/Geometry"]
[editable path="MechInterior/External/UI"]
[editable path="MechInterior/MechRegions/CLU/TestStruct6"]
[editable path="MechInterior/MechRegions/CLU/TestStruct7"]
[editable path="MechInterior/MechRegions/CLU/TestStruct8"]
[editable path="MechInterior/MechRegions/CLU/TestStruct9"]
[editable path="MechInterior/MechRegions/CLU/TestStruct10"]
